2007-02-08  Dalibor Topic  <robilad@kaffe.org>

	* pushback.h: Include jartool.h to declare the types used in struct
	definition.

2007-02-08  Dalibor Topic  <robilad@kaffe.org>

	* compress.h: Include zlib.h, jartool.h and pushback.h to declare the
	types used in parameters.

2007-02-08  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (add_file_to_jar, add_array_to_jar): Made file_name_length
	into a size_t.

2007-02-08  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (make_manifest): Turned mf_len into a size_t.

2007-02-08  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (make_manifest, add_to_jar): Turned nlen into a size_t.

2007-02-08  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (add_array_to_jar): Check if writing succeeded before
	checking if the number of written bytes matches. New local variable
	written.

2007-02-08  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (add_array_to_jar): Turn content_length into a size_t.

2007-02-08  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (build_index): Turn index_content_length into a
	size_t.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* jargrep.c (help, version): Made static.

	* jartool.c (add_array_to_jar, add_entry,
	add_file_to_jar, add_list_entry, add_to_jar
	add_to_jar_with_dir, build_index, consume
	create_central_header, extract_jar,
	get_index_entry, help, init_headers,
	list_jar, make_manifest, read_entries, usage
	version): Made static.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (data_descriptor, do_compress, file_header,
	jarfile, number_of_entries, read_names_from_stdin, seekable,
	use_explicit_list_only, verbose, ziplist, ziplisthead, 
	ziplisttail, ziptail): Made static.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* compress.c (write_data): Made static.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_PROG_STDC_CC): Use C99 if possible.

	* configure: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>
