@@ -1,5 +1,15 @@
 2007-02-08  Dalibor Topic  <robilad@kaffe.org>
 
+	* configure.ac (AC_MSG_ERROR): Stop configure if neither ftruncate 
+	or _chsize exists.
+
+	* configure: Regenerated.
+
+	* jartool.c (main): Simplified ftruncate and _chsize handling by moving 
+	the check into the configure script.
+
+2007-02-08  Dalibor Topic  <robilad@kaffe.org>
+
 	* pushback.h: Include jartool.h to declare the types used in struct
 	definition.
 
